--- a/PropertyManagesSystem/Views/RepairInfo/RepairUpdate.cshtml
+++ b/PropertyManagesSystem/Views/RepairInfo/RepairUpdate.cshtml
@@ -87,7 +87,7 @@
         </div>
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <button class="layui-btn layui-btn-normal" lay-submit lay-filter="saveBtn">确认修改</button>
+                <button class="layui-btn layui-btn-normal" lay-submit lay-filter="saveBtn">确认提交</button>
             </div>
         </div>
     </div>
